--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# data file is not to be added because it is too large 
+personal-finance-ml-dataset.zip
